fixed gallery flex wrapping

--- a/client/src/pages/Gallery/Gallery.css
+++ b/client/src/pages/Gallery/Gallery.css
@@ -1,4 +1,6 @@
 .Gallery {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     margin: 10px;
 }
